# puddle

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.test  README.md  plan.md
docs/: DESIGN_NOTES.md  SPEC.md
scripts/: test-in-docker.sh
src/: daemon.rs  lib.rs  lock.rs  main.rs  types.rs
src/cli/: commands.rs
src/executor/: command_runner.rs  filesystem.rs  lvm.rs  mdadm.rs  mod.rs  partition.rs  rollback.rs
src/metadata/: mod.rs  pool_config.rs  sync.rs
src/monitor/: mdstat.rs  mod.rs  smart.rs
src/planner/: capacity.rs  diff.rs  mod.rs  zone.rs
tests/: cli_test.rs  executor_test.rs  health_test.rs  integration_test.rs  lock_test.rs  metadata_sync_test.rs  metadata_test.rs  planner_test.rs  reliability_test.rs  rollback_test.rs
