[package]
name = "puddle"
version = "0.1.0"
edition = "2021"

[features]
default = []
integration = []

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
uuid = { version = "=1.7.0", features = ["v4", "serde"] }
getrandom = "=0.2.15"
tempfile = "3"

[dev-dependencies]
pretty_assertions = "1"
